# matter-setup-code

./: .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.adoc  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: README.md  base38.rs  bit_utils.rs  error.rs  lib.rs  verhoeff.rs
src/payload/: common.rs  manual.rs  mod.rs  qr.rs
