[package]
name = "matter_setup_code"
version = "0.1.1"
edition = "2024"
description = "Parse and generate Matter onboarding payloads, including QR codes and manual setup codes."
authors = ["Antoine Raulin <contact@araulin.eu>"]
repository = "https://git.araul.in/antoine/matter-setup-code"
homepage = "https://git.araul.in/antoine/matter-setup-code"
readme="src/README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "matter",
    "iot",
    "qrcode",
    "chip",
    "base38"
]
categories = [
    "embedded",
    "encoding",
    "network-programming"
]

[dependencies]
thiserror = "2"
deku = "0.20"